Resolve merge conflicts

--- a/MediaQuotes/app/src/main/res/values/strings.xml
+++ b/MediaQuotes/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MediaQuotes</string>
+    <string name="input">Please input a word/phrase you want to look for:</string>
 </resources>
