--- a/MediaQuotes/app/src/main/res/values/strings.xml
+++ b/MediaQuotes/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="search_button">Search</string>
     <string name="instruction1">Please select the books/series you want to search:</string>
     <string name="instruction2">Please input a word/phrase you want to look for:</string>
+    <string name="textview">TextView</string>
 </resources>
